fix: add padding to the searched tag text on mobile devices

--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -34,3 +34,15 @@
   justify-content: center;
   align-items: center;
 }
+
+.tagHeader {
+  padding: 0px 4px;
+}
+
+@media  screen and (min-width: 1240px) {
+  .header {
+    padding: 0px;
+  }
+}
+
+
